[package]
name = "lake-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = [
    "full",
] }
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "std",
    "json",
] }
aws-config = "1.5.6"
aws-sdk-s3 = "1.49.0"
bytes = "1.7.1"
thiserror = "1.0.63"
